# hextex

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hextex/: __init__.py  bin.py  cli.py  tui.py
